// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tile Tests tile Snapshot can move matches current snapshot 1`] = `
<div
  class="player1 hex tile creature"
  draggable="true"
  tabindex="0"
  title="ant"
>
  <svg
    viewBox="0 0 100 100"
    xmlns="http://www.w3.org/2000/svg"
  >
    <use
      href="#hex"
    />
    <use
      class="creature ant"
      href="#ant"
    />
  </svg>
</div>
`;

exports[`tile Tests tile Snapshot no moves matches current snapshot 1`] = `
<div
  class="player0 hex tile creature"
  title="fly"
>
  <svg
    viewBox="0 0 100 100"
    xmlns="http://www.w3.org/2000/svg"
  >
    <use
      href="#hex"
    />
    <use
      class="creature fly"
      href="#fly"
    />
  </svg>
</div>
`;
